--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ apply plugin: 'maven'
 
 sourceCompatibility = 1.8
 
+jar {
+    destinationDir new File("D:/MinecraftServer/1.12.2/plugins")
+}
+
 repositories {
     mavenCentral()
     jcenter()
@@ -12,6 +16,10 @@ repositories {
         name 'spigot-repo'
         url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
     }
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
 
 dependencies {
