코드 재정리, 버그 수정 외
- 패키지 명이 바뀌었습니다.
- 제목, 설명 추가 시 띄어쓰기가 안되는 오류가 수정되었습니다.
- 버킷 라이브러리가 Spigot 1.12로 변경되었습니다.
- 인첸트 추가 명령어가 작동하지 않았던 버그가 수정되었습니다.

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-version '1.0.0-SNAPSHOT'
+version '2.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'maven'
@@ -14,7 +14,7 @@ repositories {
     jcenter()
     maven {
         name 'spigot-repo'
-        url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
+        url "https://hub.spigotmc.org/nexus/content/groups/public/"
     }
 }
 
@@ -23,5 +23,5 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-    compile 'org.bukkit:bukkit:1.12.2-R0.1-SNAPSHOT'
+    compile 'org.spigotmc:spigot-api:1.12-R0.1-SNAPSHOT'
 }
