기본 메세지 변경, 명령어 수정 외
- 명령어 사용 방법이 바뀌었습니다.
- 아이템 목록 GUI에서 오류가 뜨던 이슈를 수정하였습니다.
- 아이템 제목, 설명 추가, 설명 설정 시 &f 색깔코드가 기본적으로 들어갑니다.

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -4,11 +4,12 @@ messages:
   done_del_lore: "§f아이템 설명이 제거되었습니다."
   done_set_lore: "§f아이템 설명이 설정되었습니다."
   not_handing_item: "§f들고 있는 아이템이 없습니다."
-  invaild_value: "§f올바르지 않은 값입니다."
-  duplicated_item: "§f이미 존재하는 아이템입니다."
-  not_duplicated_item: "§f존재하지 않는 아이템입니다."
+  invaild_value: "§c올바르지 않은 값입니다."
+  duplicated_item: "§c이미 존재하는 아이템입니다."
+  not_duplicated_item: "§c존재하지 않는 아이템입니다."
   done_create_item: "§f아이템이 만들어졌습니다."
   done_delete_item: "§f아이템이 삭제 되었습니다."
   edit_itemcode: "§f아이템 코드가 변경 되었습니다."
-  error_use_command: "§f올바르지 않은 명령어 사용 방법입니다."
+  error_use_command: "§c올바르지 않은 명령어 사용 방법입니다."
   done_enchant: "§f인첸트가 추가되었습니다."
+  fail_enchant: "§c존재하지 않는 인첸트입니다."
